--- a/src/Components/Counter/Counter.module.css
+++ b/src/Components/Counter/Counter.module.css
@@ -1,5 +1,6 @@
 .counterWrapper {
-    width: 250px;
+    width: 375px;
+    height: 285px;
     margin: 100px auto;
     border: 2px solid #dad6d6;
     background: #F5F7FB;
@@ -10,33 +11,36 @@
 }
 
 .counter {
-    width: 100px;
-    height: 45px;
-    background: aliceblue;
+    width: 160px;
+    height: 100px;
+    background: #b2cfec;
     margin-top: 50px;
     border-radius: 3px;
-    }
+    text-align: center;
+}
 
 .textCount{
-    margin: 12px 0 0 0;
-    font-size: 20px;
-    color: #3c3f41;
+    margin: 25px 0 0 0;
+    font-size: 50px;
+    color: #3a3636;
 }
 
 .counterRed {
     background: #de5151;
+    color:#ffffff;
 }
 
 .buttons {
-    margin-top: 30px;
+    margin-top: 40px;
 }
 
 .buttons button {
     border: 0;
     margin: 5px;
-    width: 78px;
-    height: 36px;
+    width: 120px;
+    height: 55px;
     border-radius: 3px;
+    font-size: 20px;
 }
 
 
