add localstorage. counter with settings

--- a/src/Components/Counter/Counter.module.css
+++ b/src/Components/Counter/Counter.module.css
@@ -67,6 +67,10 @@
     margin: 25px 0 0 0;
     color: #de5151;
     font-size: 20px;
-    /*#ffa8b9*/
-    /*background:#ffa8b9;*/
+}
+
+.errorValue {
+    margin-top: 5px;
+    color: #de5151;
+    font-size: 20px;
 }
