--- a/src/Components/Settings/CounterSettings.module.css
+++ b/src/Components/Settings/CounterSettings.module.css
@@ -49,10 +49,17 @@
     color: white;
     background: #0066CC;
 }
+
 .default:hover {
     background: #0080FF;
 }
 
 .default:active {
     background: #0059B2;
+}
+
+.disabled {
+    background: #004D99;
+    opacity: 0.5;
+    color: #002E5C;
 }
